--- a/src/Message.css
+++ b/src/Message.css
@@ -1,8 +1,31 @@
-.mission-description {
-    display: none;
+.vision-description{
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  margin-top: 30px;
+  color: #999;
+  animation: animacionTexto 4s infinite;
+  font-size: 16px;
+  line-height: 1.6;
+  animation: fadeInParagraph 1s ease forwards; 
+  animation-delay: 0.9s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .text-center:hover .mission-description {
-    display: block;
+  to {
+    opacity: 1;
   }
-  
+}
+
+@keyframes fadeInParagraph {
+  from {
+    opacity: 0;
+    transform: translateY(20px); 
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
