--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@
     margin-bottom: 20px;
     width:300px;
     height:250px;
+    border:none
  }
  .descrpiccion-service{
    margin-top: 100px;
@@ -103,3 +104,10 @@
 .btn-brand-1{
    display:none;
 }
+.footer{
+   background:#0F4191;
+}
+::selection {
+   color: white;
+   background: #516171;
+ }
