--- a/src/Message.css
+++ b/src/Message.css
@@ -9,6 +9,7 @@
   font-size: 50px;
   font-weight: bold;
   color: #00B0DC;
+  animation: bounce 4s;
 }
 .pre-title{
   font-family: "Roboto Condensed", sans-serif;
@@ -49,7 +50,18 @@ margin-bottom: 20px;
   letter-spacing: 0.5px;
   font-family: "Roboto Condensed", sans-serif;
   margin-top: 10px;
+  animation: slideInUp 2.5s ease-out;
 
+}
+@keyframes slideInUp {
+  from {
+      opacity: 0;
+      transform: translateY(50px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
 }
 .icon{
   display: flex;
@@ -68,3 +80,35 @@ margin-bottom: 20px;
   text-transform: capitalize;
   font-family: "Roboto Condensed", sans-serif;
 }
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+  }
+  40% {
+      transform: translateY(-10px);
+  }
+  60% {
+      transform: translateY(-5px);
+  }
+}
+@media screen and (max-width: 600px){
+  .icon{
+    display: flex;
+    margin-right: 7px;
+    margin-bottom: 5px;
+    color: #004AAD;
+    font-size:10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color:rgb(0, 176, 220,0.15);
+  }
+  .info-titulo{
+    margin-bottom:5px;
+    margin-right: 15px;
+    font-weight: 500;
+    font-size: 10px;
+    text-transform: capitalize;
+    font-family: "Roboto Condensed", sans-serif;
+  }
+  }
+
