--- a/src/style.css
+++ b/src/style.css
@@ -31,26 +31,63 @@
 .img-slider{
     width: 400px;
     height: 500px;
+    animation: slideInUp 0.5s ease-out;
+    transition: transform .2s; 
+}
+.img-slider:hover{
+   transform: scale(1.2); 
+}
+
+@keyframes slideInUp {
+   from {
+       opacity: 0;
+       transform: translateY(50px);
+   }
+   to {
+       opacity: 1;
+       transform: translateY(0);
+   }
+}
+.btn-conoce{
+   padding: 9px 24px;
+   font-weight: 500;
+   background: #00B0DC;
+   color:#fff;
+   border:none;
+   text-decoration: none;
 }
 .btn-brand {
     padding: 9px 24px;
     font-weight: 500;
-    background: #fff;
-    color: black;
-    border: 2px solid #00B0DC;
-    border-radius: 50px;
+    background: gray;
+    color: #fff;
+    border: none;
     text-decoration: none;
+    transition: background-color 0.3s ease;
   }
   .btn-brand:hover {
     color: white;
+    animation: bounce 1s;
     background: #00B0DC;
   }
+  @keyframes bounce {
+   0%, 20%, 50%, 80%, 100% {
+       transform: translateY(0);
+   }
+   40% {
+       transform: translateY(-10px);
+   }
+   60% {
+       transform: translateY(-5px);
+   }
+}
   .titulo-servicios{
     color:#00B0DC;
     font-size: 35px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight:700;
   }
+  
  .card-diseño{
     margin-bottom: 20px;
     width:300px;
@@ -121,5 +158,3 @@
    color: white;
    background: #516171;
  }
-
- 
